[tool.poetry]
name = "advent-2023"
version = "0.1.0"
description = ""
authors = ["David Sillman <dsillman2000@gmail.com>"]
packages = [{ include = "advent_2023" }]

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^10.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
